@@ -157,6 +157,8 @@ Version 1.1.0-CVS (?? ??? 2005)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Added support for BLOBs for MSSQL DB
+    + Added support for BLOBs for postgreSQL DB
     + Added option to upload category icons
     + Added option to disable small months
     + Added Previews to themes
